# mcp-pdf-flow

./: .gitignore  README.md  README_EN.md  pyproject.toml
.obsidian/: workspace.json
.trae/rules/: project_rules.md
docs/: BENCHMARK_REPORT.md
docs/Git_Sync_And_Optimization/: ALIGNMENT_Git_Sync_And_Optimization.md  CONSENSUS_Git_Sync_And_Optimization.md
docs/batch_table_extraction/: ACCEPTANCE_batch_table_extraction.md  ALIGNMENT_batch_table_extraction.md  CONSENSUS_batch_table_extraction.md  DESIGN_batch_table_extraction.md  FINAL_batch_table_extraction.md  TASK_batch_table_extraction.md  TODO_batch_table_extraction.md
docs/smart_pdf_logic/: ACCEPTANCE_smart_pdf_logic.md  ALIGNMENT_smart_pdf_logic.md  DESIGN_smart_pdf_logic.md  FINAL_smart_pdf_logic.md  TASK_smart_pdf_logic.md  TODO_smart_pdf_logic.md
src/simple_pdf/: convert.py  server.py
tools/: extract_pdf.py  inspect_list_items.py
