[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-pdf-extractor"
version = "0.1.0"
description = "一个用于提取PDF文本和图片的轻量级MCP服务器"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "PyMuPDF",
    "Pillow",
]

[project.scripts]
simple-pdf = "simple_pdf.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_pdf"]
