[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-pdf-extractor"
version = "0.1.0"
description = "全能 MCP 文档处理服务：智能 PDF 提取、结构化 Markdown 生成及 Word/PDF 格式互转"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "PyMuPDF",
    "Pillow",
]

[project.scripts]
simple-pdf = "simple_pdf.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_pdf"]
