[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-pdf-extractor"
version = "0.1.0"
description = "Ultimate MCP Server for PDF: AI-Ready Extraction to Markdown, RAG Support, and Format Conversion (PDF/Word)"
keywords = [
    "mcp",
    "mcp-server",
    "pdf",
    "pdf-extraction",
    "markdown",
    "llm",
    "rag",
    "document-processing",
    "pdf-to-markdown",
    "converter",
    "ai",
    "claude"
]
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "PyMuPDF",
    "Pillow",
]

[project.scripts]
simple-pdf = "simple_pdf.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_pdf"]
